--- a/Online-Examination-System/src/app/admin-login/admin-login.component.html
+++ b/Online-Examination-System/src/app/admin-login/admin-login.component.html
@@ -4,15 +4,15 @@
 <h1><br/>Cunning Wizzards !!!<img class="img-responsive" src="assets/Wizzard.jpg"></h1>
 </head>
 <body>
-<h2>Candidate Login !!!</h2>
+<h2>Admin Login !!!</h2>
 <div>
     Email-Id : &nbsp;
     <input type="text" placeholder="xyz@abc.com" required><br/><br/>
     Password : &nbsp;
     <input type="text" required> &nbsp; 
     <a routerLink="/forgot-password">Forgot Password ?</a><br/><br/>
-    <button ><a routerLink="/home-page">Login</a></button><br/><br/>
+    <button ><a routerLink="/add-admin">Login</a></button><br/><br/>
     Don't have an account &nbsp; 
-    <a routerLink="/register">Register Here.</a><br/><br/>
+    <a routerLink="/admin-register">Register Here.</a><br/><br/>
 </div>
 </body>
