--- a/Online-Examination-System/src/app/app.component.html
+++ b/Online-Examination-System/src/app/app.component.html
@@ -9,7 +9,10 @@
   <a class="navbar-brand" routerLink="/register">Register</a>&emsp;
 </button>
 <button>
-  <a class="navbar-brand" routerLink="/user-login">Login</a>&emsp;
+  <a class="navbar-brand" routerLink="/user-login">Candidate Login</a>&emsp;
+</button>
+<button>
+  <a class="navbar-brand" routerLink="/admin-login">Admin Login</a>&emsp;
 </button>
 </nav>
 </div>
