--- a/Online-Examination-System/src/app/forgot-password/forgot-password.component.html
+++ b/Online-Examination-System/src/app/forgot-password/forgot-password.component.html
@@ -1,1 +1,12 @@
-<p>forgot-password works!</p>
+<!DOCTYPE html>
+<html>
+<body>
+<h2>Reset Password</h2>
+<div>
+    Email-Id : &nbsp;
+    <input type="text" placeholder="xyz@abc.com" required><br/><br/>
+    <button type="reset" >
+        <a routerLink="/reset-password">Reset</a>
+    </button>
+</div>
+</body>
