--- a/Online-Examination-System/src/app/reset-password/reset-password.component.html
+++ b/Online-Examination-System/src/app/reset-password/reset-password.component.html
@@ -9,11 +9,11 @@
 </h2>
 <div>
     New Password : &nbsp;
-    <input type="text" placeholder="xyz@abc.com" required><br/><br/>
+    <input type="text"  required><br/><br/>
     Confirm Password : &nbsp;
-    <input type="text" placeholder="xyz@abc.com" required><br/><br/>
+    <input type="text"  required><br/><br/>
     <button >
-        <a routerLink="/user-login">Reset</a>
+        <a routerLink="/home-page">Reset</a>
     </button>
 </div>
 </body>
