--- a/OnlineExaminationApplication/src/app/app.component.html
+++ b/OnlineExaminationApplication/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
-  <a class="navbar-brand d-flex w-50 mr-auto" routerLink="/home">
+  <a class="navbar-brand w-50 mr-auto" routerLink="/home">
       <img class="img-responsive" src="assets/Wizzard.jpg" style="height: 35px; width: auto" alt="">
       Cunning Wizzards!
   </a>
