--- a/OnlineExaminationApplication/src/app/app.component.html
+++ b/OnlineExaminationApplication/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
   <a class="navbar-brand w-50 mr-auto" routerLink="/home">
-      <img class="img-responsive" src="assets/Wizzard.jpg" style="height: 35px; width: auto" alt="">
-      Cunning Wizzards!
+      <!-- <img class="img-responsive" src="assets/Wizzard.jpg" style="height: 35px; width: auto" alt=""> -->
+      <i class="fas fa-hat-wizard"></i>&nbsp;Cunning Wizards!
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,14 +9,14 @@
   <div class="navbar-collapse collapse" id="navbarNavDropdown">
     <ul class="navbar-nav w-100 justify-content-center">
       <li class="nav-item">
-          <a class="nav-link" disabled>Hi {{displayName}}</a>
+          <a class="nav-link" disabled>Hi {{displayType}}: {{displayName}}</a>
       </li>
     </ul>
     <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <li *ngIf="displayName=='User'" class="nav-item dropdown">
+      <li *ngIf="displayName=='Guest'" class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" role="button" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Login
         </a>
@@ -25,15 +25,15 @@
           <a class="dropdown-item" routerLink="/login" [queryParams]="{ type: 'User' }">User</a>
         </div>
       </li>
-      <li *ngIf="displayName=='User'" class="nav-item">
+      <li *ngIf="displayName=='Guest'" class="nav-item">
         <a class="nav-link" routerLink="/register">Register</a>
       </li>
-      <li *ngIf="displayName!='User'" class="nav-item">
+      <li *ngIf="displayName!='Guest'" class="nav-item">
         <a class="nav-link" role="button" (click)="logOut()">Logout</a>
       </li>
     </ul>
   </div>
 </nav>
-<div class="container alert alert-secondary" style="height: 200vh; text-align-last: center; padding-top: 5%;">
+<div class="container alert alert-secondary" style="height: 125vh; overflow: auto; text-align-last: center; padding-top: 5%;">
   <router-outlet></router-outlet>
 </div>
