--- a/OnlineExaminationApplication/src/app/home/home.component.html
+++ b/OnlineExaminationApplication/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p><a routerLink="" class="btn btn-secondary btn-lg btn-block">View Reports</a></p>
+    <p><a routerLink="/reports" class="btn btn-secondary btn-lg btn-block">View Reports</a></p>
     <p *ngIf="displayType=='User'"><a routerLink="/tests" class="btn btn-primary btn-lg btn-block">New Exam</a></p>
     <p *ngIf="displayType=='Admin'"><a routerLink="/files" class="btn btn-primary btn-lg btn-block">Change Question Files</a></p>
     <p *ngIf="displayType=='Admin'"><a routerLink="/structures" class="btn btn-primary btn-lg btn-block">Change Test Structures</a></p>
