--- a/OnlineExaminationApplication/src/app/login/login.component.html
+++ b/OnlineExaminationApplication/src/app/login/login.component.html
@@ -1,30 +1,51 @@
 <div class="container">
-    <h1>Login</h1><br/>
-    <div class="alert alert-danger" *ngIf="showError">
-        <span>{{showError}}</span>
+    <div *ngIf="!showingResetInstructions">
+        <h1>Login</h1><br/>
+        <div class="alert alert-danger" *ngIf="showError">
+            <span>{{showError}}</span>
+        </div>
+        <form [formGroup]="myForm" (ngSubmit)="tryLogin()">
+            <div class="inp">
+                <label for="emailInput">Email:</label>
+                <input type="email" class="form-control" id="emailInput" placeholder="xyz@gmail.com" formControlName="email">
+                <div class="alert alert-danger" *ngIf="email.touched && email.invalid">
+                    <span *ngIf="email.errors.required">Email cannot be empty</span>
+                </div>
+            </div>
+            <div class="inp">
+                <label for="passwordInput">Password:</label>
+                <input type="password" class="form-control" id="passwordInput" placeholder="Password" formControlName="password">
+                <div class="alert alert-danger" *ngIf="password.touched && password.invalid">
+                    <span *ngIf="password.errors.required">Password cannot be empty</span>
+                    <span *ngIf="password.errors.minlength">Password cannot be less than 6 characters</span>
+                    <span *ngIf="password.errors.maxlength">Password cannot be more than 12 characters</span>
+                </div>
+            </div>
+            <button type="button" class="btn btn-secondary go-left" (click)="clearDetails()">Reset</button>
+            <button [disabled]="!myForm.valid" type="submit" class="btn btn-primary go-left">Login</button>
+            <div *ngIf="loginType=='User'">
+            <a role="button" (click)="showResetInstructions()" class="go-right">Forgot Password?</a><br/><br/><br/>
+            Don't have an account? <a routerLink="/register">Register Here</a>
+            </div>
+        </form>
     </div>
-    <form [formGroup]="myForm" (ngSubmit)="tryLogin()">
-        <div class="inp">
-            <label for="emailInput">Email:</label>
-            <input type="email" class="form-control" id="emailInput" placeholder="xyz@gmail.com" formControlName="email">
-            <div class="alert alert-danger" *ngIf="email.touched && email.invalid">
-                <span *ngIf="email.errors.required">Email cannot be empty</span>
-            </div>
+    <div *ngIf="showingResetInstructions">
+        <h1>Forgot Password</h1><br/>
+        <div class="alert alert-danger" *ngIf="showResetError">
+            <span>{{showResetError}}</span>
         </div>
-        <div class="inp">
-            <label for="passwordInput">Password:</label>
-            <input type="password" class="form-control" id="passwordInput" placeholder="Password" formControlName="password">
-            <div class="alert alert-danger" *ngIf="password.touched && password.invalid">
-                <span *ngIf="password.errors.required">Password cannot be empty</span>
-                <span *ngIf="password.errors.minlength">Password cannot be less than 6 characters</span>
-                <span *ngIf="password.errors.maxlength">Password cannot be more than 12 characters</span>
+        <form [formGroup]="myResetForm" (ngSubmit)="trySendMail()">
+            <div class="inp">
+                <label for="emailReset">Email:</label>
+                <input type="email" class="form-control" id="emailReset" placeholder="xyz@gmail.com" formControlName="resetmail">
+                <div class="alert alert-danger" *ngIf="resetmail.touched && resetmail.invalid">
+                    <span *ngIf="resetmail.errors.required">Email cannot be empty</span>
+                </div>
             </div>
-        </div>
-        <button type="button" class="btn btn-secondary go-left" (click)="clearDetails()">Reset</button>
-        <button type="submit" class="btn btn-primary go-left">Login</button>
-        <a routerLink="/forgot-password" class="go-right">Forgot Password?</a><br/><br/><br/>
-        Don't have an account? <a routerLink="/register">Register Here</a>
-    </form>
+            <button [disabled]="!myResetForm.valid" type="submit" class="btn btn-primary go-left">Send Password Reset Mail</button>
+            <a role="button" (click)="goBack()" class="go-right">Back to Login?</a><br/><br/><br/>
+        </form>
+    </div>
 </div>
 
 
