--- a/OnlineExaminationApplication/src/app/question-files/question-files.component.html
+++ b/OnlineExaminationApplication/src/app/question-files/question-files.component.html
@@ -17,7 +17,7 @@
 </div>
 <br/><hr/>
 <div *ngIf="files">
-    <h1>Remove File</h1><br/>
+    <h1>Remove Files</h1><br/>
     <p>
         <select [(ngModel)]="selectFile" (change)="setProperties()">
             <option *ngFor="let file of files" [ngValue]="file">Name: {{file.Name}}, Upload Date: {{file.UploadDate}}</option>
